# fastapi-app-template

./: README.md  build_lambda.sh  pyproject.toml
api/: .env.dev  .env.test  Makefile  main.py  requirements.txt  settings.py  utils.py
api/data/: repos.py
api/domain/: entities.py
api/infra/repos/: __init__.py  courses.py
api/routers/: courses.py
api/tests/: test_hello.py
