[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Ezer Silva <ezersilva@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mangum = "^0.15.1"
fastapi = "^0.81.0"
pydantic = "^1.9.2"
python-dotenv = "^0.20.0"
pytest = "^7.1.2"
uvicorn = "^0.18.3"
sqlmodel = "^0.0.6"

[tool.poetry.dev-dependencies]
fastapi = "^0.81.0"
pydantic = "^1.9.2"
python-dotenv = "^0.20.0"
pytest = "^7.1.2"
uvicorn = "^0.18.3"
sqlmodel = "^0.0.6"
python-slugify = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
